# GoNoteGo

./: .gitignore  README.md  hardware.md  installation.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/scripts/: README.md  install_geckodriver.sh  setup_bash_history.sh  setup_boot.sh  setup_python_env.sh  setup_wifi_ap.sh
.github/templates/: README.md  bash_history  dhcpcd.conf  dnsmasq.conf  hostapd  hostapd.conf  uap0.service
.github/workflows/: build.yml
gonotego/: installation.md  supervisord.conf
gonotego/audio/: audiolistener.py  runner.py  trigger.py
gonotego/command_center/: assistant_commands.py  commands.py  custom_commands.py  email_commands.py  llm_provider.py  note_commands.py  registry.py  runner.py  scheduler.py  settings_commands.py  system_commands.py  twitter_commands.py  wifi_commands.py
gonotego/common/: events.py  internet.py  interprocess.py  leds.py  status.py  test_events.py  wifi.py
gonotego/desktop/: start.py
gonotego/leds/: colors.py  indicators.py  runner.py
gonotego/mouse/: runner.py
gonotego/scratch/: insert_note.py
gonotego/settings/: api_server.py  runner.py  secure_settings_template.py  server.py  settings.py  wifi.py
gonotego/settings-server/: components.json  index.html  package-lock.json  package.json  tailwind.config.js
gonotego/settings-server/api/: README.md  server.py
gonotego/settings-server/src/: App.tsx  index.css
gonotego/settings-server/src/components/ui/: alert.tsx  button.tsx  card.tsx  hover-card.tsx  input.tsx
gonotego/settings-server/src/lib/api/: settings.ts
gonotego/settings/tools/: generate_template.py
gonotego/settings/wifi/: __init__.py
gonotego/settings_server/: runner.py
gonotego/settings_server/static/: form.css  form.html  form.js
gonotego/text/: runner.py  shell.py
gonotego/transcription/: runner.py  transcriber.py
gonotego/uploader/: internet.py  roam_uploader.py  runner.py
gonotego/uploader/blob/: blob_uploader.py
gonotego/uploader/browser/: driver_utils.py
gonotego/uploader/email/: email_uploader.py
gonotego/uploader/ideaflow/: ideaflow_uploader.py
gonotego/uploader/mem/: mem_uploader.py
gonotego/uploader/notion/: notion_uploader.py
gonotego/uploader/remnote/: remnote_uploader.py
gonotego/uploader/roam/: helper.js  roam_uploader.py  template.js
gonotego/uploader/slack/: __init__.py  slack_uploader.py
gonotego/uploader/twitter/: twitter_uploader.py
scripts/: install_settings.sh  migrate_to_networkmanager.sh
