[project]
name = "GoNoteGo"
version = "1.0.0"
description = "Go Note Go: A headless keyboard for taking notes on the go."
readme = "README.md"

requires-python = ">=3.7"
# license = {file = "LICENSE.txt"}
keywords = ["raspberry pi", "note taking", "writing", "no screen", "headless keyboard", "pkm", "camping"]
authors = [
  {name = "David Bieber", email = "david810@gmail.com"}
]
maintainers = [
  {name = "David Bieber", email = "david810@gmail.com"}
]

classifiers = [
  "Programming Language :: Python :: 3",
]

dependencies = [
  'absl-py<=2.1.0',
  'apscheduler<=3.10.4',
  'dropbox<=12.0.2',
  'fire<=0.7.0',
  'flask<=3.0.3',
  'keyboard<=0.13.5',
  'numpy<=2.1.3',
  'openai<=1.52.2',
  'parsedatetime<=2.6',
  'python-dateutil<=2.8.2',
  'redis<=4.3.4',
  # selenium 4.0 breaks with arm geckodriver.
  'selenium==3.141.0',
  'setuptools-rust<=1.10.2',
  'sounddevice<=0.4.5',
  'soundfile',
  'supervisor<=4.2.4',
  'twython<=3.9.1',
  "urllib3==1.26.19",  # For compatibility with selenium==3.141.0
]

[project.optional-dependencies]
dev = []
test = [
  'ruff',
  'pytest',
]

[project.urls]
"Homepage" = "https://davidbieber.com/projects/go-note-go/"
"Features List" = "https://davidbieber.com/snippets/2023-01-16-go-note-go-features/"
"Bug Reports" = "https://github.com/dbieber/GoNoteGo/issues"
"Funding" = "https://donate.stripe.com/4gwg2Y65WevpeWc8ww"
"Say Thanks!" = "https://saythanks.io/to/dbieber"
"Learn More" = "https://davidbieber.com/tags/go-note-go/"
"Source" = "https://github.com/dbieber/GoNoteGo"

[tool.ruff]
line-length = 180
lint.ignore = ["E722"]
exclude = ["scratch"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
